quantum computers typos

--- a/app/templates/texts/quantum_computers_author_bio.html
+++ b/app/templates/texts/quantum_computers_author_bio.html
@@ -1,1 +1,1 @@
-Olalla Castro-Alvaredo is a Senior Lecturer at City, University of London. She is an expert in integrable quantum field theory: a physical theory that describes quantum interactions between large sets of elementary particles in one space dimension.
+Olalla is a Senior Lecturer in Mathematics at City, University of London. She is an expert in integrable quantum field theory, a physical theory that describes quantum interactions between large sets of elementary particles in one space dimension.
