attraction episode without views

--- a/app/templates/texts/science_of_attraction_author_bio.html
+++ b/app/templates/texts/science_of_attraction_author_bio.html
@@ -1,1 +1,1 @@
-Dr. Carlota Batres received her PhD from the University of St Andrews, where she examined the science behind facial preferences. Currently, she is a postdoctoral fellow at Gettysburg College. Her research is presently funded by Chanel and focuses on how cosmetics influence face perceptions.
+Carlota received her PhD from the University of St. Andrews, where she examined the science behind people’s facial preferences. Now a postdoctoral fellow at Gettysburg College, her current research (funded by Chanel) focuses on how cosmetics influence facial perceptions.
