captain_america episode ready

--- a/app/templates/texts/captain_america_politics_author_bio.html
+++ b/app/templates/texts/captain_america_politics_author_bio.html
@@ -1,1 +1,1 @@
-bio
+Jason Dittmer is Professor of Political Geography at University College London, where he studies the geographies of comic books, and critical approaches to diplomacy. His recent books include <i>Captain America and the Nationalist Superhero: Metaphors, Narratives, and Geopolitics</i> (2013), and <i>Popular Culture, Geopolitics, and Identity</i> (2010).
