--- a/app/templates/texts/carbon_cycle_author_bio.html
+++ b/app/templates/texts/carbon_cycle_author_bio.html
@@ -1,1 +1,1 @@
-Heather is a lecturer in Physics at Imperial College London. She studies greenhouse gases in the atmosphere, particularly carbon dioxide and methane, by making measurements and running numerical models.
+Heather is a lecturer in physics at Imperial College London. She studies greenhouse gases in the atmosphere, particularly carbon dioxide and methane, by making measurements and running numerical models.
